--- a/admin.html
+++ b/admin.html
@@ -2,197 +2,120 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Admin Nilai Rapor</title>
+<title>Cek Rapor Siswa Kelas 9C</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
 <style>
-body{font-family:Arial;background:#f1f5f9}
-.box{max-width:1000px;margin:30px auto;background:#fff;padding:20px;border-radius:10px}
-h3{margin-top:0;text-align:center}
-input,button{padding:10px;margin-top:8px}
-button{background:#2563eb;color:#fff;border:none;border-radius:6px;cursor:pointer}
-table{width:100%;border-collapse:collapse;margin-top:15px}
-th,td{border:1px solid #ccc;padding:8px;text-align:center}
-th{background:#2563eb;color:#fff}
-.form-grid{
- display:grid;
- grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
- gap:10px;
- margin-top:10px;
+body {
+  font-family: Arial, sans-serif;
+  background: #f0f6ff;
+  margin: 0;
+  padding: 20px;
 }
-img.foto{width:40px;height:40px;border-radius:50%;object-fit:cover}
-hr{margin:20px 0}
+.container {
+  max-width: 500px;
+  margin: auto;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+h2 {
+  text-align: center;
+  color: #0b5ed7;
+}
+input, button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 10px;
+  font-size: 16px;
+}
+button {
+  background: #0b5ed7;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+button:hover {
+  background: #084298;
+}
+.hasil {
+  margin-top: 20px;
+  padding: 15px;
+  background: #f8f9fa;
+  border-radius: 6px;
+}
+.status {
+  font-size: 22px;
+  font-weight: bold;
+  color: green;
+}
+.footer {
+  text-align: center;
+  font-size: 12px;
+  color: #666;
+  margin-top: 20px;
+}
 </style>
 </head>
 
 <body>
+<div class="container">
+  <h2>CEK RAPOR SISWA<br>KELAS 9C</h2>
 
-<!-- LOGIN ADMIN -->
-<div class="box" id="loginBox">
-<h3>Login Admin</h3>
-<input id="user" placeholder="Username">
-<input id="pass" type="password" placeholder="Password">
-<button onclick="login()">Login</button>
-<p id="err" style="color:red;text-align:center"></p>
-</div>
+  <input type="text" id="nisn" placeholder="Masukkan NISN" />
 
-<!-- ADMIN -->
-<div class="box" id="adminBox" style="display:none">
+  <button onclick="cekRapor()">Cek Rapor</button>
 
-<h3>Input Nilai Siswa</h3>
+  <div id="hasil" class="hasil" style="display:none;"></div>
 
-<!-- INPUT MANUAL -->
-<b>➕ Input Manual</b>
-<div class="form-grid">
-<input id="mNisn" placeholder="NISN">
-<input id="mNama" placeholder="Nama">
-<input id="mKelas" placeholder="Kelas">
-<input id="mNilai" placeholder="Nilai" type="number">
-<input id="mFoto" placeholder="Link / ID Google Drive Foto">
-</div>
-<button onclick="tambahManual()">Tambah Siswa</button>
-
-<hr>
-
-<!-- UPLOAD EXCEL -->
-<b>📤 Upload Excel</b><br>
-<input type="file" id="file" accept=".xlsx">
-<button onclick="loadExcel()">Upload Excel</button>
-
-<!-- TABEL -->
-<table>
-<thead>
-<tr>
-<th>Rank</th>
-<th>Foto</th>
-<th>NISN</th>
-<th>Nama</th>
-<th>Kelas</th>
-<th>Nilai</th>
-<th>Hapus</th>
-</tr>
-</thead>
-<tbody id="list"></tbody>
-</table>
-
+  <div class="footer">
+    SMP Negeri 1 Cibingbin<br>
+    Tahun Pelajaran 2024/2025
+  </div>
 </div>
 
 <script>
-let siswa = [];
+const SHEET_ID = "1BCxVPh9XYDPRVCVx54Y0GskfwomYeMqSd6KWD3nBHOg";
+const SHEET_NAME = "Sheet1";
+const URL = `https://opensheet.elk.sh/${SHEET_ID}/${SHEET_NAME}`;
 
-/* LOGIN */
-function login(){
- if(user.value==="admin" && pass.value==="12345"){
-  loginBox.style.display="none";
-  adminBox.style.display="block";
-  loadLocal();
- } else err.innerText="Login salah";
-}
+async function cekRapor() {
+  const nisn = document.getElementById("nisn").value.trim();
+  const hasilDiv = document.getElementById("hasil");
 
-/* AMBIL ID GOOGLE DRIVE */
-function getDriveId(link){
- if(!link) return "";
- link=String(link).trim();
- let m=link.match(/\/d\/([^/]+)/);
- if(m) return m[1];
- let m2=link.match(/id=([^&]+)/);
- if(m2) return m2[1];
- return link;
-}
+  if (!nisn) {
+    alert("Silakan masukkan NISN");
+    return;
+  }
 
-/* LOAD DARI LOCALSTORAGE */
-function loadLocal(){
- const d = JSON.parse(localStorage.getItem("dataRanking")) || [];
- siswa = d.map(s=>({
-  nisn:s.nisn,
-  nama:s.nama,
-  kelas:s.kelas,
-  nilai:Number(s.nilai),
-  foto:s.foto
- }));
- render();
-}
+  hasilDiv.style.display = "none";
 
-/* TAMBAH MANUAL */
-function tambahManual(){
- if(!mNisn.value||!mNama.value||!mNilai.value){
-  alert("Lengkapi data");
-  return;
- }
+  try {
+    const res = await fetch(URL);
+    const data = await res.json();
 
- siswa.push({
-  nisn:mNisn.value.trim(),
-  nama:mNama.value.trim(),
-  kelas:mKelas.value.trim(),
-  nilai:Number(mNilai.value),
-  foto:getDriveId(mFoto.value)
- });
+    const siswa = data.find(s => s.nisn === nisn);
 
- mNisn.value=mNama.value=mKelas.value=mNilai.value=mFoto.value="";
- render();
-}
+    if (!siswa) {
+      alert("Data siswa tidak ditemukan");
+      return;
+    }
 
-/* UPLOAD EXCEL */
-function loadExcel(){
- const f=file.files[0];
- if(!f) return alert("Pilih file Excel");
+    hasilDiv.innerHTML = `
+      <p><b>Nama:</b> ${siswa.nama}</p>
+      <p><b>Kelas:</b> ${siswa.kelas}</p>
+      <p><b>Rata-rata:</b> ${siswa.rata}</p>
+      <p class="status">${siswa.status}</p>
+      <p>${siswa.catatan || ""}</p>
+    `;
 
- const r=new FileReader();
- r.onload=e=>{
-  const wb=XLSX.read(e.target.result,{type:"binary"});
-  const ws=wb.Sheets[wb.SheetNames[0]];
-  const data=XLSX.utils.sheet_to_json(ws);
+    hasilDiv.style.display = "block";
 
-  data.forEach(d=>{
-   siswa.push({
-    nisn:String(d.NISN).trim(),
-    nama:d.NAMA,
-    kelas:d.KELAS,
-    nilai:Number(d.NILAI),
-    foto:getDriveId(d.FOTO)
-   });
-  });
-
-  render();
- };
- r.readAsBinaryString(f);
-}
-
-/* HAPUS */
-function hapus(i){
- if(confirm("Hapus siswa?")){
-  siswa.splice(i,1);
-  render();
- }
-}
-
-/* RENDER + RANK */
-function render(){
- siswa.sort((a,b)=>b.nilai-a.nilai);
- list.innerHTML="";
-
- siswa.forEach((s,i)=>{
-  list.innerHTML+=`
-  <tr>
-   <td>${i+1}</td>
-   <td><img class="foto"
-     src="https://drive.google.com/thumbnail?id=${s.foto}"
-     onerror="this.src='default.jpg'"></td>
-   <td>${s.nisn}</td>
-   <td>${s.nama}</td>
-   <td>${s.kelas}</td>
-   <td>${s.nilai}</td>
-   <td><button onclick="hapus(${i})">❌</button></td>
-  </tr>`;
- });
-
- localStorage.setItem(
-  "dataRanking",
-  JSON.stringify(siswa.map((s,i)=>({...s,rank:i+1})))
- );
+  } catch (error) {
+    alert("Gagal mengambil data");
+    console.error(error);
+  }
 }
 </script>
-
 </body>
 </html>
